--- a/iasfilepicker/src/main/res/layout/cs_photo_preview_fragment.xml
+++ b/iasfilepicker/src/main/res/layout/cs_photo_preview_fragment.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/white"
+            app:tint="@color/black"
             app:maxImageSize="36dp"
             android:tint="@color/black"
             android:layout_alignParentStart="true"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             app:backgroundTint="@color/white"
             android:tint="@color/black"
+            app:tint="@color/black"
             app:maxImageSize="36dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
