--- a/iasfilepicker/src/main/res/layout/cs_file_picker_fragment.xml
+++ b/iasfilepicker/src/main/res/layout/cs_file_picker_fragment.xml
@@ -21,6 +21,7 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="60dp"
         app:backgroundTint="@color/white"
+        app:tint="@color/black"
         android:tint="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
