--- a/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
+++ b/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
@@ -24,6 +24,7 @@
             app:backgroundTint="@color/white"
             app:maxImageSize="36dp"
             android:tint="@color/black"
+            app:tint="@color/black"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:src="@drawable/cs_camera_retake" />
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/white"
+            app:tint="@color/black"
             android:tint="@color/black"
             app:maxImageSize="36dp"
             android:layout_alignParentEnd="true"
