--- a/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
+++ b/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#000000"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.inappstory.sdk.stories.ui.video.VideoPlayer
+    <com.inappstory.utils.iasfilepicker.utils.VideoPlayer
         android:id="@+id/video_preview"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
@@ -21,10 +21,10 @@
             android:id="@+id/restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="#FFFFFF"
             app:maxImageSize="36dp"
-            android:tint="@color/black"
-            app:tint="@color/black"
+            android:tint="#000000"
+            app:tint="#000000"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:src="@drawable/cs_camera_retake" />
@@ -33,9 +33,9 @@
             android:id="@+id/approve"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/white"
-            app:tint="@color/black"
-            android:tint="@color/black"
+            app:backgroundTint="#FFFFFF"
+            app:tint="#000000"
+            android:tint="#000000"
             app:maxImageSize="36dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
