--- a/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
+++ b/iasfilepicker/src/main/res/layout/cs_video_preview_fragment.xml
@@ -21,10 +21,10 @@
             android:id="@+id/restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="#FFFFFF"
+            app:backgroundTint="@color/white"
             app:maxImageSize="36dp"
-            android:tint="#000000"
-            app:tint="#000000"
+            android:tint="@color/black"
+            app:tint="@color/black"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:src="@drawable/cs_camera_retake" />
@@ -33,9 +33,9 @@
             android:id="@+id/approve"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:backgroundTint="#FFFFFF"
-            app:tint="#000000"
-            android:tint="#000000"
+            app:backgroundTint="@color/white"
+            app:tint="@color/black"
+            android:tint="@color/black"
             app:maxImageSize="36dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
